Closed Bug 1045094 Opened 10 years ago Closed 10 years ago

Fix some bad implicit constructors in telemetry

Categories

(Toolkit :: Telemetry, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan
Blocks: explicit
Attachment #8463437 - Flags: review?(nfroyd)
Attachment #8463437 - Flags: review?(nfroyd) → review+
https://hg.mozilla.org/mozilla-central/rev/7633ca6e949b
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: