Bug 1045094 - Fix some bad implicit constructors in telemetry; r=froydnj